2009-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/toolbar.c:
   Display item labels instead of raw names in the toolbar editor.
   Apply changes in the toolbar editor instantly.
   Show icons in the toolbar editor.
   Speed up toolbar editor dialog creation.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Enable file monitoring for files which are written to disk by Geany
   for the first time.
 * src/filetypes.c:
   Fix broken special case handling when detecting filetypes from a
   shebang or other special file headers.


2009-07-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Make Mark All keybinding clear search highlighting when there's no
   current word.
 * src/search.c:
   Fix wrong match length when using Mark with regex.
 * src/geanyobject.c, src/geanyobject.h, src/treeviews.c,
   src/keyfile.c, src/main.c:
   Add 'Show Paths' documents list popup item.
   Add "load_settings" core-only signal emitted just after loading
   main keyfile settings; useful to delay building UI elements until
   settings have been read.
 * src/treeviews.c:
   Fix GTK warning when right-clicking on default tag tree.
 * src/treeviews.c, src/treeviews.h, src/keyfile.c, src/main.c:
   Add treeviews_finalize().
   Remove tv.popup_openfiles field.


2009-07-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Fix building on GTK 2.8 (patch by Eugene Arshinov, thanks).


2009-07-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c:
   Quote the uri before passing it to the browser when opening a
   website (closes #2818635).
 * src/win32:
   Fix broken 'builtin' Run command for HTML files on Windows.


2009-07-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Properly fix wrong brace highlighting of non-brace character.
 * src/editor.c:
   Allow autocompletion in Perl double-quoted strings.