@@ -5,6 +5,10 @@
    Apply changes in the toolbar editor instantly.
    Show icons in the toolbar editor.
    Speed up toolbar editor dialog creation.
+ * src/templates.c:
+   Improve inserting of comment templates like File header or licence
+   notices. The comment information are now read from the filetype
+   configuration files.
 
 
 2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
